# ani-tui

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  install.ps1  install.sh  to-do.md
.github/workflows/: release.yml
src/: action.rs  app.rs  config.rs  main.rs  tui.rs
src/api/: allanime.rs  anilist.rs  jikan.rs  kitsu.rs  mod.rs  notify.rs
src/model/: anime.rs  mod.rs  stream.rs
src/player/: iina.rs  mod.rs  mpv.rs  vlc.rs
src/ui/: detail.rs  mod.rs  search.rs  setup.rs
