[package]
name = "ani-tui"
version = "0.1.0"
edition = "2024"
description = "A terminal user interface for browsing and watching anime"
license = "MIT"

[dependencies]
ratatui = "0.30"
ratatui-image = "10"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = { version = "0.37", features = ["serialize"] }
toml = "0.8"
image = "0.25"
dirs = "6"
color-eyre = "0.6"
futures = "0.3"
